# aura

./: .gitignore  Cargo.toml  LICENSE  README.md  aura_main.db  build_mac_pkg.sh  build_packages.sh
.github/workflows/: ci.yml  release.yml
aura-cli/: Cargo.toml
aura-cli/src/: main.rs  network.rs
aura-cli/wix/: main.wxs
crates/aura-cli/src/: tests.rs
crates/aura-common/: Cargo.toml
crates/aura-common/src/: document.rs  error.rs  lib.rs
crates/aura-consensus/: Cargo.toml
crates/aura-consensus/src/: lib.rs  rpc.rs  state.rs
crates/aura-query/: Cargo.toml
crates/aura-query/src/: executor.rs  lib.rs  tests.rs
crates/aura-security/: Cargo.toml
crates/aura-security/src/: homomorphic.rs  kem.rs  lib.rs  sign.rs  symmetric.rs  tests.rs
crates/aura-server/: Cargo.toml
crates/aura-server/src/: connection.rs  main.rs  protocol.rs  tests.rs
crates/aura-server/wix/: main.wxs
crates/aura-store/: Cargo.toml  test_btree.db
crates/aura-store/src/: index.rs  lib.rs  page.rs  pager.rs  tests.rs
crates/aura-store/src/btree/: manager.rs  mod.rs  node.rs
distribution/launchd/: com.aura.db.plist
distribution/scripts/: post-install.sh  pre-install.sh
distribution/systemd/: aura-server.service
scripts/: release.sh
